# altv-go

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: log.hpp  main.cpp  main.hpp  resource.cpp  resource.hpp  runtime.cpp  runtime.hpp
test/: AltV.Net.Host.runtimeconfig.json  install.js  package-lock.json  package.json  server.cfg  update.json
test/cache/: example2.resource
test/resources/example/: client.js  resource.cfg
test/resources/example2/: client.js  main.js  resource.cfg
